# seo_agent_generator

./: .env.example  .gitignore  Makefile  README.md  main.py  project_config.md  pyproject.toml  pytest.ini  run_experiment.py  workflow_state.md
.cursor/rules/: python-best-practices.mdc
data/: éducateur-canin_clusters_2025-03-28.csv
examples/prompts/: blog_post_prompt_seo_v1.py  blog_post_prompt_seo_v1_2.py  blog_post_prompt_seo_v2.py
src/: __init__.py  config.py
src/agents/: __init__.py  content_writer.py  image_generator.py
src/data/: __init__.py  csv_processor.py  models.py
src/evaluators/: content_evaluator.py
src/experiments/: __init__.py  experiment_config.py  experiment_manager.py  experiment_runner.py
src/experiments/config/experiment_configs/: seo_blog_comparison.json
src/experiments/config/model_configs/: deepseek_deepseek-chat-v3-0324.json  google_gemini-2.0-flash-001.json
src/experiments/config/prompt_configs/: creative_blog_v0.0.1_20250331.json  default_blog_source.json
src/experiments/repositories/: __init__.py  config_repository.py  experiment_repository.py  keyword_repository.py
src/experiments/results/40966e4d-27ea-4e60-99cc-fc2c24194dd8/: 20250401_170252_deepseek_deepseek-chat-v3-0324_creative_blog_v0.0.1_20250331.json  (+3 more)
src/prompts/: __init__.py  blog_post_prompt.py  blog_post_prompt_old.py
src/services/: __init__.py  image_api_service.py  openrouter_service.py
src/utils/: __init__.py  ibis_utils.py  logger.py  text_utils.py
tests/: conftest.py
tests/evaluators/: test_content_evaluator.py
