[project]
name = "seo-agent-generator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "ibis-framework[duckdb]>=10.4.0",
    "pandas>=2.2.3",
    "pydantic>=2.11.1",
    "python-dotenv>=1.1.0",
    "tenacity>=9.0.0",
    "tqdm>=4.67.1",
    "openai>=1.12.0",
    "pillow>=11.1.0",
    "bs4>=0.0.2",
    "textstat>=0.7.5",
]

[dependency-groups]
dev = [
    "pytest-mock>=3.14.0",
    "pytest>=8.3.5",
    "ruff>=0.11.2",
    "make>=0.1.6.post2",
    "anyio>=4.9.0",
    "pytest-asyncio>=0.26.0",
]
